# pronunciation_scoring

./: LICENSE  Makefile  README.md  hello.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
pronunciation_scoring/: __init__.py  dataset.py  features.py  plots.py
pronunciation_scoring/modeling/: predict.py  train.py
