[project]
name = "pronunciation-scoring"
version = "0.1.0"
description = "Explore about pronunciation scoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "loguru>=0.7.2",
    "mkdocs>=1.6.1",
    "pip>=24.3.1",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.5",
    "typer>=0.12.5",
]
